@@ -228,8 +228,6 @@ vips_join_class_init( VipsJoinClass *class )
 	vobject_class->description = _( "join a pair of images" );
 	vobject_class->build = vips_join_build;
 
-	operation_class->flags = VIPS_OPERATION_SEQUENTIAL_UNBUFFERED;
-
 	VIPS_ARG_IMAGE( class, "in1", -1, 
 		_( "in1" ), 
 		_( "First input image" ),
