@@ -16,6 +16,9 @@
  * 4/9/12
  * 	- stop all threads on error
  * 	- don't stall forever, just delay ahead threads
+ * 25/2/14
+ * 	- we were allowing skipahead if the first request was for y>0, but
+ * 	  this broke on some busy, many-core systems, see comment below
  */
 
 /*
@@ -144,11 +147,9 @@ vips_sequential_generate( VipsRegion *or,
 		return( -1 );
 	}
 
-	if( r->top > sequential->y_pos /* &&
-		sequential->y_pos > 0 */ ) {
-		/* We have started reading (y_pos > 0) and this request is for
-		 * stuff beyond that, stall for a while to give other
-		 * threads time to catch up.
+	if( r->top > sequential->y_pos ) {
+		/* This request is for stuff beyond the current read position, 
+		 * stall for a while to give other threads time to catch up.
 		 * 
 		 * The stall can be cancelled by a signal on @ready.
 		 *
@@ -156,6 +157,16 @@ vips_sequential_generate( VipsRegion *or,
 		 * deadlock, and we don't fail on timeout, since the timeout 
 		 * may be harmless.
 		 */
+
+		/* We used to not stall if the read position was zero, ie. if
+		 * the first request was for a line some way down the image,
+		 * and assume this was extract or somesuch. But this could
+		 * sometimes break on busy, many-core systems.
+		 *
+		 * Think of a better way to support eg. extract safely in
+		 * sequential mode.
+		 */
+
 #ifdef HAVE_COND_INIT
 		gint64 time;
 
